--- a/Desafios/d005/style.css
+++ b/Desafios/d005/style.css
@@ -1,6 +1,5 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
 *{
     padding:0;
     margin:0;
@@ -35,17 +34,33 @@ main{
 main p {
     max-width: 400px;
     padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 60px;
+    font-family: 'Sriracha', sans-serif;
     line-height: 40px;
 }
 section{
-    min-height:300px;
+    min-height:400px;
 }
 #img1{
     background-image: url('./imagens/background001.jpg');
     background-position: right center;
     background-size: cover;
     background-attachment: fixed;
+}
+#img1 p {
+    padding:50px;
+    padding-left: 20px;
+}
+#img2{
+    background-image: url('./imagens/background002.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: left bottom;
+}
+#img2 p{
+    background-color: rgba(0, 0, 0, 0.499);
+    padding:50px;
+    padding-left: 20px;
 }
 .imagem p{
     color:white;
@@ -66,6 +81,9 @@ section{
 
 footer a{
     color:white;
+}
+footer a:hover{
+    text-decoration: underline;
 }
 footer{
     color:white;
