--- a/Projetos/projeto-lista-de-gifs/style.css
+++ b/Projetos/projeto-lista-de-gifs/style.css
@@ -3,6 +3,7 @@
     padding:0;
     margin:0;
 }
+
 body{
     font-family: 'Poppins', sans-serif;
     background-color:#908F8E ;
@@ -13,8 +14,12 @@ header{
 .botaotrocatema{
     background-color:#908F8E ;
     border-style: none; 
-    margin-left:885px;
+    margin-left: 885px;
 
+}
+.botaotrocatemaescuro{
+    background-color:#23272A;
+    margin-left: 885px;
 }
 .tema{
     width:55px;
@@ -32,11 +37,24 @@ header{
     max-width:1000px ;
     margin:auto;
 }
+.listagifsescuro{
+    max-width:1000px ;
+    margin:auto;
+}
 .listagifs li{
     display: inline-block;
     width:170px;
     margin:30px;
     background-color: #D7E2EC;
+    border-radius: 15px;
+    padding:5px;
+}
+.listagifsescuro li{
+    background-color: #5b5f62;
+    color:white;
+    display: inline-block;
+    width:170px;
+    margin:30px;
     border-radius: 15px;
     padding:5px;
 }
@@ -48,4 +66,12 @@ span{
     margin:auto;
     max-width: 100px;
 }
-
+.tipo{
+    background-color: purple;
+    color: white;
+    padding:5px;
+    border-radius: 13px;
+    text-align: center;
+    margin:50px;
+    
+}
